--- a/index.html
+++ b/index.html
@@ -1,56 +1,96 @@
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KARBA Financial Consultant</title>
 
-  <link rel="icon" href="assets/favicon.ico" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="icon" href="assets/favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- 1) Config FIRST -->
+  <!-- Public config FIRST -->
   <script src="config.js"></script>
 
-  <!-- 2) reCAPTCHA v3 (render with your SITE key from config.js) -->
+  <!-- Google reCAPTCHA v3 (loads grecaptcha on window) -->
   <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
-
-  <!-- 3) App script (only once; no cache-busting duplicates) -->
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- … your page … -->
+  <!-- Topbar -->
+  <header class="nav">
+    <div class="nav__inner container">
+      <img src="assets/logo.png" alt="KARBA logo" class="brand__logo" />
+      <nav class="menu">
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="#lead">Book Free Consultation</a>
+      </nav>
+    </div>
+  </header>
 
-  <!-- Contact/lead form — keep these exact ids/names -->
-  <section class="section">
-    <h2>Book a Free Consultation</h2>
-    <p id="form-status" class="status">Checking API…</p>
-
-    <form id="lead-form" novalidate>
-      <label>Full name
-        <input id="name" name="name" type="text" autocomplete="name" required />
-      </label>
-
-      <label>Email
-        <input id="email" name="email" type="email" autocomplete="email" required />
-      </label>
-
-      <label>Phone (optional)
-        <input id="phone" name="phone" type="tel" autocomplete="tel" />
-      </label>
-
-      <label>Service of interest
-        <select id="service" name="service" required>
-          <option value="Life Insurance">Life Insurance</option>
-          <option value="Family Protection Plans">Family Protection Plans</option>
-          <option value="Children Education Plans">Children Education Plans</option>
-          <option value="Retirement & Annuity">Retirement &amp; Annuity</option>
-        </select>
-      </label>
-
-      <label>Message (optional)
-        <textarea id="message" name="message" rows="4"></textarea>
-      </label>
-
-      <button id="submitBtn" type="submit">Submit</button>
-    </form>
+  <!-- HERO (simple slider) -->
+  <section class="hero" id="home">
+    <img id="heroImg" alt="Hero" />
+    <div class="hero__overlay">
+      <h1>Live Confidently. Invest Wisely. Leave a Legacy.</h1>
+      <div class="hero__badges">
+        <img src="assets/ciin-logo.png" alt="CIIN" />
+        <img src="assets/naicom-logo.png" alt="NAICOM" />
+        <img src="assets/cac-logo.png" alt="CAC" />
+      </div>
+    </div>
   </section>
+
+  <!-- Lead form -->
+  <section id="lead" class="section">
+    <div class="container">
+      <h2>Book a Free Consultation</h2>
+      <p>Please fill your name, email, and service of interest.</p>
+
+      <div id="status" class="status">Checking API…</div>
+
+      <form id="lead-form" class="form">
+        <div class="grid">
+          <label>Full name
+            <input name="name" type="text" placeholder="Your full name" required />
+          </label>
+
+          <label>Email
+            <input name="email" type="email" placeholder="you@example.com" required />
+          </label>
+
+          <label>Phone (optional)
+            <input name="phone" type="tel" placeholder="080…" />
+          </label>
+
+          <label>Service of interest
+            <select name="service" required>
+              <option value="Life Insurance">Life Insurance</option>
+              <option value="Family Protection Plans">Family Protection Plans</option>
+              <option value="Children Education Plans">Children Education Plans</option>
+              <option value="Retirement & Annuity">Retirement & Annuity</option>
+              <option value="Motor / Car Insurance">Motor / Car Insurance</option>
+            </select>
+          </label>
+
+          <label class="span-2">Message (optional)
+            <textarea name="message" rows="4" placeholder="How can we help?"></textarea>
+          </label>
+        </div>
+
+        <button id="submitBtn" type="submit" class="btn">Submit</button>
+
+        <!-- Invisible badge location (loaded programmatically) -->
+        <div id="recaptcha-container" style="display:none;"></div>
+      </form>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">© 2025 KARBA. All rights reserved.</div>
+  </footer>
+
+  <!-- App script LAST (after config + recaptcha script) -->
+  <script src="script.js" defer></script>
 </body>
+</html>
