--- a/index.html
+++ b/index.html
@@ -7,91 +7,69 @@
 
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Load config first -->
+  <!-- 1) Load config first -->
   <script src="config.js"></script>
 
-  <!-- Load reCAPTCHA -->
-  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+  <!-- 2) Load reCAPTCHA v3 loader -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-  <!-- Your app script -->
+  <!-- 3) Your app logic -->
   <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Topbar -->
-  <header class="nav">
-    <div class="nav__inner container">
-      <img src="assets/logo.png" alt="KARBA logo" class="brand__logo" />
+  <header class="navy">
+    <div class="nav_inner container">
+      <img src="assets/logo.png" alt="KARBA" class="brand_logo" />
       <nav class="menu">
         <a href="#services">Services</a>
         <a href="#about">About</a>
-        <a href="#lead">Book Free Consultation</a>
+        <a href="#consult" class="btn gold">Book Free Consultation</a>
       </nav>
     </div>
   </header>
 
-  <!-- HERO (simple slider) -->
-  <section class="hero" id="home">
-    <img id="heroImg" alt="Hero" />
-    <div class="hero__overlay">
-      <h1>Live Confidently. Invest Wisely. Leave a Legacy.</h1>
-      <div class="hero__badges">
-        <img src="assets/ciin-logo.png" alt="CIIN" />
-        <img src="assets/naicom-logo.png" alt="NAICOM" />
-        <img src="assets/cac-logo.png" alt="CAC" />
-      </div>
-    </div>
-  </section>
-
-  <!-- Lead form -->
-  <section id="lead" class="section">
-    <div class="container">
-      <h2>Book a Free Consultation</h2>
+  <main class="container">
+    <section id="consult">
+      <h1>Book a Free Consultation</h1>
       <p>Please fill your name, email, and service of interest.</p>
-
-      <div id="status" class="status">Checking API…</div>
+      <p id="status" class="text-muted"></p>
 
       <form id="lead-form" class="form">
         <div class="grid">
           <label>Full name
-            <input name="name" type="text" placeholder="Your full name" required />
+            <input id="name" name="name" type="text" placeholder="Your full name" required />
           </label>
 
           <label>Email
-            <input name="email" type="email" placeholder="you@example.com" required />
+            <input id="email" name="email" type="email" placeholder="you@example.com" required />
           </label>
 
           <label>Phone (optional)
-            <input name="phone" type="tel" placeholder="080…" />
+            <input id="phone" name="phone" type="tel" placeholder="080..." />
           </label>
 
           <label>Service of interest
-            <select name="service" required>
-              <option value="Life Insurance">Life Insurance</option>
-              <option value="Family Protection Plans">Family Protection Plans</option>
-              <option value="Children Education Plans">Children Education Plans</option>
-              <option value="Retirement & Annuity">Retirement & Annuity</option>
-              <option value="Motor / Car Insurance">Motor / Car Insurance</option>
+            <select id="service" name="service">
+              <option>Life Insurance</option>
+              <option>Retirement & Annuity</option>
+              <option>Children Education Plans</option>
+              <option>Family Protection Plans</option>
+              <option>Motor / Car Insurance</option>
             </select>
           </label>
 
-          <label class="span-2">Message (optional)
-            <textarea name="message" rows="4" placeholder="How can we help?"></textarea>
+          <label class="span2">Message (optional)
+            <textarea id="message" name="message" rows="4" placeholder="How can we help?"></textarea>
           </label>
         </div>
 
-        <button id="submitBtn" type="submit" class="btn">Submit</button>
-
-        <!-- Invisible badge location (loaded programmatically) -->
-        <div id="recaptcha-container" style="display:none;"></div>
+        <button id="submit-btn" class="btn gold" type="submit">Submit</button>
       </form>
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <footer class="footer">
+  <footer class="foot navy">
     <div class="container">© 2025 KARBA. All rights reserved.</div>
   </footer>
-
-  <!-- App script LAST (after config + recaptcha script) -->
-  <script src="script.js" defer></script>
 </body>
 </html>
