--- a/index.html
+++ b/index.html
@@ -2,74 +2,116 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>KARBA Financial Consultant</title>
 
+  <link rel="icon" href="assets/favicon.ico" />
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- 1) Load config first -->
+  <!-- Config FIRST -->
   <script src="config.js"></script>
 
-  <!-- 2) Load reCAPTCHA v3 loader -->
+  <!-- reCAPTCHA script (safe even if no site key; we guard in script.js) -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
-  <!-- 3) Your app logic -->
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <header class="navy">
-    <div class="nav_inner container">
-      <img src="assets/logo.png" alt="KARBA" class="brand_logo" />
+  <header class="nav">
+    <div class="nav__inner container">
+      <div class="brand">
+        <img src="assets/logo.png" alt="KARBA" class="brand__logo" />
+        <span class="brand__text"><strong>KARBA</strong> Financial Consultant</span>
+      </div>
       <nav class="menu">
         <a href="#services">Services</a>
         <a href="#about">About</a>
-        <a href="#consult" class="btn gold">Book Free Consultation</a>
+        <a href="#consult">Book Free Consultation</a>
       </nav>
     </div>
   </header>
 
+  <!-- HERO with image slider -->
+  <section class="hero">
+    <img id="heroImg" alt="Hero" />
+    <div class="hero__overlay">
+      <h1>Live Confidently. Invest Wisely. Leave a Legacy.</h1>
+      <div class="cta-row">
+        <a class="btn btn-gold" href="#consult">Get Covered Today</a>
+        <a class="btn btn-outline" href="https://wa.me/2348090914569" target="_blank" rel="noopener">Chat on WhatsApp</a>
+      </div>
+    </div>
+  </section>
+
   <main class="container">
-    <section id="consult">
-      <h1>Book a Free Consultation</h1>
+    <section id="services" class="section">
+      <h2>Our Services</h2>
+      <p>Tailored protection and investment solutions for families, professionals, and growing businesses.</p>
+    </section>
+
+    <section id="about" class="section">
+      <h2>About</h2>
+      <p>We help you protect what matters and grow long-term wealth with disciplined, client-first planning.</p>
+    </section>
+
+    <section id="consult" class="section">
+      <h2>Book a Free Consultation</h2>
       <p>Please fill your name, email, and service of interest.</p>
-      <p id="status" class="text-muted"></p>
+      <div id="status" class="status">Checking API…</div>
 
       <form id="lead-form" class="form">
         <div class="grid">
-          <label>Full name
-            <input id="name" name="name" type="text" placeholder="Your full name" required />
+          <label>
+            Full name
+            <input id="name" type="text" placeholder="Your full name" required />
           </label>
 
-          <label>Email
-            <input id="email" name="email" type="email" placeholder="you@example.com" required />
+          <label>
+            Email
+            <input id="email" type="email" placeholder="you@example.com" required />
           </label>
 
-          <label>Phone (optional)
-            <input id="phone" name="phone" type="tel" placeholder="080..." />
+          <label>
+            Phone (optional)
+            <input id="phone" type="tel" placeholder="080…" />
           </label>
 
-          <label>Service of interest
-            <select id="service" name="service">
+          <label>
+            Service of interest
+            <select id="service" required>
               <option>Life Insurance</option>
-              <option>Retirement & Annuity</option>
-              <option>Children Education Plans</option>
               <option>Family Protection Plans</option>
+              <option>Children Education Plans</option>
               <option>Motor / Car Insurance</option>
+              <option>Retirement & Annuity</option>
             </select>
           </label>
 
-          <label class="span2">Message (optional)
-            <textarea id="message" name="message" rows="4" placeholder="How can we help?"></textarea>
+          <label class="full">
+            Message (optional)
+            <textarea id="message" rows="4" placeholder="How can we help?"></textarea>
           </label>
         </div>
 
-        <button id="submit-btn" class="btn gold" type="submit">Submit</button>
+        <button id="submitBtn" class="btn btn-gold" type="submit">Submit</button>
       </form>
     </section>
   </main>
 
-  <footer class="foot navy">
-    <div class="container">© 2025 KARBA. All rights reserved.</div>
+  <footer class="foot">
+    <div class="container foot__row">
+      <div class="foot__brand">
+        <img src="assets/logo.png" alt="KARBA" class="brand__logo small" />
+        <span>KARBA Financial Consultant</span>
+      </div>
+      <nav class="foot__links">
+        <a href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
+        <a href="https://instagram.com" target="_blank" rel="noopener">Instagram</a>
+        <a href="https://youtube.com" target="_blank" rel="noopener">YouTube</a>
+      </nav>
+    </div>
+    <div class="container foot__copy">© <span id="year"></span> KARBA. All rights reserved.</div>
   </footer>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
