--- a/index.html
+++ b/index.html
@@ -3,115 +3,70 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>KARBA Financial Consultant</title>
-
-  <link rel="icon" href="assets/favicon.ico" />
+  <title>KARBA – Book a Free Consultation</title>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Config FIRST -->
+  <!-- Load config FIRST (defines window.KARBA_CONFIG) -->
   <script src="config.js"></script>
 
-  <!-- reCAPTCHA script (safe even if no site key; we guard in script.js) -->
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <!-- Google reCAPTCHA v3 (site key comes from config.js inside script.js) -->
+  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
 </head>
+
 <body>
   <header class="nav">
-    <div class="nav__inner container">
-      <div class="brand">
-        <img src="assets/logo.png" alt="KARBA" class="brand__logo" />
-        <span class="brand__text"><strong>KARBA</strong> Financial Consultant</span>
-      </div>
-      <nav class="menu">
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#consult">Book Free Consultation</a>
-      </nav>
+    <div class="brand">
+      <img src="assets/logo.png" alt="KARBA" />
+      <span>KARBA Financial Consultant</span>
     </div>
   </header>
 
-  <!-- HERO with image slider -->
-  <section class="hero">
-    <img id="heroImg" alt="Hero" />
-    <div class="hero__overlay">
-      <h1>Live Confidently. Invest Wisely. Leave a Legacy.</h1>
-      <div class="cta-row">
-        <a class="btn btn-gold" href="#consult">Get Covered Today</a>
-        <a class="btn btn-outline" href="https://wa.me/2348090914569" target="_blank" rel="noopener">Chat on WhatsApp</a>
-      </div>
-    </div>
-  </section>
-
-  <main class="container">
-    <section id="services" class="section">
-      <h2>Our Services</h2>
-      <p>Tailored protection and investment solutions for families, professionals, and growing businesses.</p>
-    </section>
-
-    <section id="about" class="section">
-      <h2>About</h2>
-      <p>We help you protect what matters and grow long-term wealth with disciplined, client-first planning.</p>
-    </section>
-
-    <section id="consult" class="section">
-      <h2>Book a Free Consultation</h2>
+  <main class="wrap">
+    <section class="card">
+      <h1>Book a Free Consultation</h1>
       <p>Please fill your name, email, and service of interest.</p>
       <div id="status" class="status">Checking API…</div>
 
-      <form id="lead-form" class="form">
-        <div class="grid">
-          <label>
-            Full name
-            <input id="name" type="text" placeholder="Your full name" required />
+      <form id="lead-form" class="form" novalidate>
+        <div class="row">
+          <label>Full name
+            <input type="text" name="name" id="name" placeholder="Your full name" required />
           </label>
 
-          <label>
-            Email
-            <input id="email" type="email" placeholder="you@example.com" required />
-          </label>
-
-          <label>
-            Phone (optional)
-            <input id="phone" type="tel" placeholder="080…" />
-          </label>
-
-          <label>
-            Service of interest
-            <select id="service" required>
-              <option>Life Insurance</option>
-              <option>Family Protection Plans</option>
-              <option>Children Education Plans</option>
-              <option>Motor / Car Insurance</option>
-              <option>Retirement & Annuity</option>
-            </select>
-          </label>
-
-          <label class="full">
-            Message (optional)
-            <textarea id="message" rows="4" placeholder="How can we help?"></textarea>
+          <label>Email
+            <input type="email" name="email" id="email" placeholder="you@example.com" required />
           </label>
         </div>
 
-        <button id="submitBtn" class="btn btn-gold" type="submit">Submit</button>
+        <div class="row">
+          <label>Phone (optional)
+            <input type="tel" name="phone" id="phone" placeholder="080…" />
+          </label>
+
+          <label>Service of interest
+            <select name="service" id="service" required>
+              <option value="Life Insurance">Life Insurance</option>
+              <option value="Family Protection Plans">Family Protection Plans</option>
+              <option value="Retirement & Annuity">Retirement & Annuity</option>
+              <option value="Children Education Plans">Children Education Plans</option>
+              <option value="Motor / Car Insurance">Motor / Car Insurance</option>
+            </select>
+          </label>
+        </div>
+
+        <label>Message (optional)
+          <textarea name="message" id="message" rows="4" placeholder="How can we help?"></textarea>
+        </label>
+
+        <button id="submitBtn" type="submit" class="btn">Submit</button>
       </form>
     </section>
   </main>
 
-  <footer class="foot">
-    <div class="container foot__row">
-      <div class="foot__brand">
-        <img src="assets/logo.png" alt="KARBA" class="brand__logo small" />
-        <span>KARBA Financial Consultant</span>
-      </div>
-      <nav class="foot__links">
-        <a href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
-        <a href="https://instagram.com" target="_blank" rel="noopener">Instagram</a>
-        <a href="https://youtube.com" target="_blank" rel="noopener">YouTube</a>
-      </nav>
-    </div>
-    <div class="container foot__copy">© <span id="year"></span> KARBA. All rights reserved.</div>
-  </footer>
+  <footer class="foot">© <span id="year"></span> KARBA. All rights reserved.</footer>
 
+  <!-- App logic LAST -->
   <script src="script.js" defer></script>
 </body>
 </html>
