--- a/index.html
+++ b/index.html
@@ -4,69 +4,76 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>KARBA – Book a Free Consultation</title>
-  <link rel="icon" type="image/png" href="/assets/favicon.png" />
   <link rel="stylesheet" href="styles.css" />
-
-  <!-- Load config FIRST (defines window.KARBA_CONFIG) -->
-  <script src="config.js"></script>
-
-  <!-- Google reCAPTCHA v3 (site key comes from config.js inside script.js) -->
-  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
 </head>
-
 <body>
   <header class="nav">
     <div class="brand">
-      <img src="assets/logo.png" alt="KARBA" />
-      <span>KARBA Financial Consultant</span>
+      <img src="assets/logo.png" alt="KARBA" class="brand__logo" />
+      <span class="brand__text">KARBA Financial Consultant</span>
     </div>
+    <nav class="menu">
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="#book">Book Free Consultation</a>
+    </nav>
   </header>
 
-  <main class="wrap">
-    <section class="card">
-      <h1>Book a Free Consultation</h1>
-      <p>Please fill your name, email, and service of interest.</p>
-      <div id="status" class="status">Checking API…</div>
+  <main class="container" id="book">
+    <h1>Book a Free Consultation</h1>
+    <p>Please fill your name, email, and service of interest.</p>
 
-      <form id="lead-form" class="form" novalidate>
-        <div class="row">
-          <label>Full name
-            <input type="text" name="name" id="name" placeholder="Your full name" required />
-          </label>
+    <p id="status" class="status">Checking API…</p>
 
-          <label>Email
-            <input type="email" name="email" id="email" placeholder="you@example.com" required />
-          </label>
-        </div>
-
-        <div class="row">
-          <label>Phone (optional)
-            <input type="tel" name="phone" id="phone" placeholder="080…" />
-          </label>
-
-          <label>Service of interest
-            <select name="service" id="service" required>
-              <option value="Life Insurance">Life Insurance</option>
-              <option value="Family Protection Plans">Family Protection Plans</option>
-              <option value="Retirement & Annuity">Retirement & Annuity</option>
-              <option value="Children Education Plans">Children Education Plans</option>
-              <option value="Motor / Car Insurance">Motor / Car Insurance</option>
-            </select>
-          </label>
-        </div>
-
-        <label>Message (optional)
-          <textarea name="message" id="message" rows="4" placeholder="How can we help?"></textarea>
+    <form id="lead-form" class="form">
+      <div class="grid">
+        <label>
+          Full name
+          <input id="name" name="name" type="text" placeholder="Your full name" required />
         </label>
+        <label>
+          Email
+          <input id="email" name="email" type="email" placeholder="you@example.com" required />
+        </label>
+      </div>
 
-        <button id="submitBtn" type="submit" class="btn">Submit</button>
-      </form>
-    </section>
+      <div class="grid">
+        <label>
+          Phone (optional)
+          <input id="phone" name="phone" type="tel" placeholder="080..." />
+        </label>
+        <label>
+          Service of interest
+          <select id="service" name="service">
+            <option>Life Insurance</option>
+            <option>Children Education Plans</option>
+            <option>Family Protection Plans</option>
+            <option>Motor / Car Insurance</option>
+            <option>Retirement & Annuity</option>
+          </select>
+        </label>
+      </div>
+
+      <label>
+        Message (optional)
+        <textarea id="message" name="message" rows="4" placeholder="How can we help?"></textarea>
+      </label>
+
+      <button id="submitBtn" type="submit" class="btn">Submit</button>
+    </form>
   </main>
 
-  <footer class="foot">© <span id="year"></span> KARBA. All rights reserved.</footer>
+  <footer class="foot">
+    © <span id="year"></span> KARBA. All rights reserved.
+  </footer>
 
-  <!-- App logic LAST -->
+  <!-- 1) Config FIRST (pure JS file) -->
+  <script src="config.js"></script>
+
+  <!-- 2) reCAPTCHA v3 (explicit so we call execute ourselves) -->
+  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+
+  <!-- 3) App logic LAST (only once) -->
   <script src="script.js" defer></script>
 </body>
 </html>
