--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>KARBA – Book a Free Consultation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>KARBA Financial Consultant</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header class="nav">
+  <header class="wrap">
     <div class="brand">
       <img src="assets/logo.png" alt="KARBA" class="brand__logo" />
       <span class="brand__text">KARBA Financial Consultant</span>
@@ -19,61 +19,62 @@
     </nav>
   </header>
 
-  <main class="container" id="book">
-    <h1>Book a Free Consultation</h1>
-    <p>Please fill your name, email, and service of interest.</p>
+  <main class="wrap">
+    <section id="book" class="card">
+      <h1>Book a Free Consultation</h1>
+      <p>Please fill your name, email, and service of interest.</p>
+      <div id="status" class="status"></div>
 
-    <p id="status" class="status">Checking API…</p>
+      <form id="lead-form" class="form" autocomplete="on" novalidate>
+        <div class="grid">
+          <label>
+            <span>Full name</span>
+            <input id="name" name="name" type="text" placeholder="Your full name" required />
+          </label>
+          <label>
+            <span>Email</span>
+            <input id="email" name="email" type="email" placeholder="you@example.com" required />
+          </label>
+        </div>
 
-    <form id="lead-form" class="form">
-      <div class="grid">
+        <div class="grid">
+          <label>
+            <span>Phone (optional)</span>
+            <input id="phone" name="phone" type="tel" placeholder="080..." />
+          </label>
+          <label>
+            <span>Service of interest</span>
+            <select id="service" name="service">
+              <option>Life Insurance</option>
+              <option>Family Protection Plans</option>
+              <option>Children Education Plans</option>
+              <option>Motor / Car Insurance</option>
+              <option>Retirement & Annuity</option>
+            </select>
+          </label>
+        </div>
+
         <label>
-          Full name
-          <input id="name" name="name" type="text" placeholder="Your full name" required />
+          <span>Message (optional)</span>
+          <textarea id="message" name="message" rows="5" placeholder="How can we help?"></textarea>
         </label>
-        <label>
-          Email
-          <input id="email" name="email" type="email" placeholder="you@example.com" required />
-        </label>
-      </div>
 
-      <div class="grid">
-        <label>
-          Phone (optional)
-          <input id="phone" name="phone" type="tel" placeholder="080..." />
-        </label>
-        <label>
-          Service of interest
-          <select id="service" name="service">
-            <option>Life Insurance</option>
-            <option>Children Education Plans</option>
-            <option>Family Protection Plans</option>
-            <option>Motor / Car Insurance</option>
-            <option>Retirement & Annuity</option>
-          </select>
-        </label>
-      </div>
-
-      <label>
-        Message (optional)
-        <textarea id="message" name="message" rows="4" placeholder="How can we help?"></textarea>
-      </label>
-
-      <button id="submitBtn" type="submit" class="btn">Submit</button>
-    </form>
+        <button id="submitBtn" type="submit" class="btn">Submit</button>
+      </form>
+    </section>
   </main>
 
-  <footer class="foot">
-    © <span id="year"></span> KARBA. All rights reserved.
+  <footer class="wrap foot">
+    <small>© <span id="year"></span> KARBA. All rights reserved.</small>
   </footer>
 
-  <!-- 1) Config FIRST (pure JS file) -->
+  <!-- 1) Your config FIRST (no script tags inside the file) -->
   <script src="config.js"></script>
 
-  <!-- 2) reCAPTCHA v3 (explicit so we call execute ourselves) -->
+  <!-- 2) reCAPTCHA v3 loader (no key here; we’ll pass it in script.js) -->
   <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
 
-  <!-- 3) App logic LAST (only once) -->
-  <script src="script.js" defer></script>
+  <!-- 3) App logic -->
+  <script src="script.js"></script>
 </body>
 </html>
